Made MatchingObject generic in respect to the Matchable it's holding